@@ -436,7 +436,13 @@ public class ServerManager implements HConstants {
           break;
 
         case MSG_REPORT_SPLIT:
-          processSplitRegion(region, incomingMsgs[++i], incomingMsgs[++i]);
+          processSplitRegion(region, incomingMsgs[++i].getRegionInfo(),
+            incomingMsgs[++i].getRegionInfo());
+          break;
+        
+        case MSG_REPORT_SPLIT_INCLUDES_DAUGHTERS:
+          processSplitRegion(region, incomingMsgs[i].getDaughterA(),
+            incomingMsgs[i].getDaughterB());
           break;
 
         default:
@@ -477,14 +483,14 @@ public class ServerManager implements HConstants {
    * @param splitB
    * @param returnMsgs
    */
-  private void processSplitRegion(HRegionInfo region, HMsg splitA, HMsg splitB) {
+  private void processSplitRegion(HRegionInfo region, HRegionInfo a, HRegionInfo b) {
     synchronized (master.getRegionManager()) {
       // Cancel any actions pending for the affected region.
       // This prevents the master from sending a SPLIT message if the table
       // has already split by the region server. 
       this.master.getRegionManager().endActions(region.getRegionName());
-      assignSplitDaughter(splitA.getRegionInfo());
-      assignSplitDaughter(splitB.getRegionInfo());
+      assignSplitDaughter(a);
+      assignSplitDaughter(b);
       if (region.isMetaTable()) {
         // A meta region has split.
         this.master.getRegionManager().offlineMetaRegion(region.getStartKey());
